--- a/AUTHORS
+++ b/AUTHORS
@@ -8,7 +8,7 @@ Brian Miller, for pointing me at some weird cases.
 Arthur C. Clarke and Stanley Kubrick, for showing a primitive
 newsreader in "2001: A Space Odyssey".
 
-htdocs/skins/fancy/Loading.gif: Flip Darius. Downloaded from
+htdocs/images/Loading.gif: Flip Darius. Downloaded from
 http://commons.wikimedia.org/wiki/Image:Loading.gif
 (Creative Commons ShareAlike 2.5:
 http://creativecommons.org/licenses/by-sa/2.5/
