--- a/TODO
+++ b/TODO
@@ -62,6 +62,16 @@
 - Bug: keybindings.js doesn't handle non-letter bindings well: "?"
   gets turned into Spanish upside-down question mark by toUpperCase().
 	Need a notation to bind Esc.
+- Split up PHP scripts into HTML (presentation) vs. REST (do things,
+  return results in JSON).
+	Now that the skins are gone, it should be possible to just use
+  HTML outlines for initial presentation, and do everything useful
+  with REST/JSON.
+	The initial-presentation scripts can just be turned into
+  static HTML pages. Some of them still have logic in them, and this
+  will have to be split up.
+	Perhaps put HTML files in ./htdocs, and REST scripts in
+  ./htdocs/rest. Update URLs accordingly.
 - Slow sync vs. fast sync:
 	Have the server send a timestamp (down to the millisecond, I'd
   say) of the last update. The client will use this when requesting
