--- a/TODO
+++ b/TODO
@@ -1,3 +1,8 @@
+- Bug: I think at some point, the feed URL is being updated where it
+  shouldn't be:
+	When update.php runs, it says which feeds have HTTP redirects.
+  I update the feeds, but then something changes them back..
+	Double-check that this is actually happening.
 - Bug: When subscribing to a feed, the initial display doesn't work:
   subscribe to a new feed, which gets ID 999. This redirects you to
   .../view.php?id=999.
