--- a/TODO
+++ b/TODO
@@ -1,8 +1,17 @@
-- Bug: I think at some point, the feed URL is being updated where it
-  shouldn't be:
-	When update.php runs, it says which feeds have HTTP redirects.
-  I update the feeds, but then something changes them back..
-	Double-check that this is actually happening.
+- Bug?: The feed URL is being updated where it arguably shouldn't be:
+	When update.php runs, it says that a feed has an HTTP redirect,
+  e.g.,
+	http://foo.com/rss -> http://bar.org/rss
+
+	But then a feed can have a link-to-self, e.g.,
+	<channel>
+	  <atom:link href="http://foo.com/rss" rel="self" type="application/rss+xml"/>
+  (Le Monde does this). This is an Atom feed that says, "here is the
+  preferred URL at which to get this feed." So this URL is official,
+  and the HTTP redirect is intentional, if the admin knows what
+  they're doing.
+	Or perhaps the admin updated the feed URL and forgot to update
+  the <atom:link>. So I'm not sure what to do about this.
 - Bug: When subscribing to a feed, the initial display doesn't work:
   subscribe to a new feed, which gets ID 999. This redirects you to
   .../view.php?id=999.
