--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
+- Bug: On the dev box, at some point, possibly when I imported an OPML
+  file, a bunch of entries in the `counts` table were created badly:
+  they all have num_read==9. In those cases where there aren't 9 items
+  total, this leads to a negative unread count.
 - Bug?: The feed URL is being updated where it arguably shouldn't be:
 	When update.php runs, it says that a feed has an HTTP redirect,
   e.g.,
